# malforge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.sandbox  Makefile  README.md  SECURITY.md  pyproject.toml  test.hex  test_stealth.cs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
malforge/: __main__.py  crypt.py  emit.py  forge.py  shellcode.py  snippets.py  snippets_new.py
malforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
malforge/core/: database.py  logger.py
malforge/templates/: cs_dll.cs  cs_hollow.cs  cs_runner.cs  cs_stealth.cs  installutil.cs  jscript.js  msbuild.csproj  ps_runner.ps1  vba_macro.vba
scripts/: Provision-Sandbox.ps1  simulate_user.sh  validate_payloads.py
templates/: cs_dll.cs  hta_runner.hta  msbuild.csproj
tests/: test_cli.py  test_crypt.py  test_emit.py  test_forge.py  test_output_validation.py  test_shellcode.py  test_stealth.py
