[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "malforge"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=41.0",
    "structlog>=23.1.0",
    "jinja2>=3.1.0"
]

[project.scripts]
malforge = "malforge.__main__:main"

[tool.setuptools.packages.find]
include = ["malforge*"]

[tool.setuptools.package-data]
malforge = ["templates/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
